# atomemory

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  atomic_memory_build_spec.md  claude_code_prompts.md  docker-compose.yml  pyproject.toml  requirements.txt
atomir/: __init__.py  _http.py  api.py  assembly.py  atomic_read.py  client.py  config.py  extractor.py  locking.py  memory.py  ranking.py  reconciler.py  store_base.py
atomir/embeddings/: __init__.py  fake.py  jina.py  ollama.py  openai.py  voyage.py
atomir/integrations/: __init__.py  langchain.py  langgraph.py  mcp_server.py
atomir/llm/: __init__.py  anthropic.py  fake.py  groq.py  ollama.py  openai.py  parsing.py
atomir/providers/: __init__.py  embedder_base.py  factory.py  llm_base.py
atomir/stores/: __init__.py  json_store.py  qdrant_store.py
eval/: compare_mem0.py  eval_set.json  run_eval.py  temp_ab.py  tune.py
eval/locomo/: BENCHMARKS.md  README.md  aggregate.py  atomir_client.py
examples/: langchain_chat.py  langgraph_multiagent.py
