[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Distribution (PyPI) name matches the import package `atomir`.
name = "atomir"
version = "0.5.1"
description = "Atomic memory infrastructure for agents — atomic facts on write, atomic sub-question decomposition on read."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "bekiTil" }]
# Trove classifiers — the pyversions badge reads these (not requires-python).
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "python-dotenv>=1.0",
    "numpy>=1.26",
]

# Optional extras keep the core lean; install only what a deployment uses.
# groq/jina call their HTTP APIs over stdlib urllib, so they need NO SDK — the
# extras exist for a consistent install story and forward compatibility.
[project.optional-dependencies]
groq = []
jina = []
openai = []
anthropic = []
voyage = []
ollama = []
qdrant = ["qdrant-client>=1.7"]
api = ["fastapi>=0.100", "uvicorn[standard]>=0.23"]
langchain = ["langchain-core>=0.3"]
langgraph = ["langgraph>=0.2"]
all = ["qdrant-client>=1.7", "fastapi>=0.100", "uvicorn[standard]>=0.23", "langchain-core>=0.3", "langgraph>=0.2"]

# Discover atomir and ALL its subpackages (stores, llm, embeddings, providers).
[tool.setuptools.packages.find]
include = ["atomir*"]
